# TurnCheckerComp

./: .gitignore  Cargo.toml  build.rs  graphics.toml  parameters.txt  plan.md  session.html
.github/workflows/: build-macos.yml  build-windows.yml  release.yml
locales/en-US/: app.ftl
locales/fr-FR/: app.ftl
src/: channels.rs  database.rs  i18n.rs  main.rs  platform.rs  server.rs  server_tests.rs  ui.rs
src/database/: checks.rs  checks_tests.rs  comments.rs  comments_tests.rs  common.rs  connection.rs  connection_tests.rs  current_session.rs  current_session_tests.rs  tags.rs  tags_tests.rs
src/models/: check_repeat_type.rs  check_repeat_type_tests.rs  check_source_type.rs  checks.rs  comment.rs  current_session.rs  mod.rs  tag.rs
src/server/: dto.rs  http.rs  http_tests.rs  notifications.rs  notifications_tests.rs  pairing.rs  service.rs
src/ui/: check_presentation.rs  components.rs  content.rs  content_actions.rs  content_database.rs  content_dialogs.rs  content_helpers.rs  content_next_turn.rs  content_tests.rs  content_toolbar.rs  main_content_view.rs  main_content_view_database.rs  main_content_view_tests.rs  main_content_view_toolbar.rs  pairing.rs  startup.rs  theme.rs  ui_config.rs  ui_helpers.rs  views.rs
src/ui/components/: check_cards.rs  round_icon_button.rs  toggle_button.rs
src/ui/content/: check_cards.rs  checklist.rs  comments.rs  main.rs  main_content_view.rs  new_check.rs  new_check_draft.rs  new_check_draft_tests.rs  next_turn_waiting.rs  source_checks.rs  toggle_button.rs
src/ui/main_content_view/: comments.rs  comments_view.rs  (+2 more)
(+14 files in other folders)
