[package]
name = "turn_checker_comp"
version = "0.1.1"
edition = "2021"
description = "A desktop compagnon app for Turn Checker iOS App"
build = "build.rs"

[[bin]]
name = "turn_checker_comp"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.1", features = ["glow"] }
egui = "0.34.1"
egui_extras = { version = "0.34.1", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.102"
uuid = { version = "1", features = ["serde", "v4"] }
qrcode = "0.14"
toml = "0.8"
fluent-templates = "0.13"
unic-langid = "0.9"
sys-locale = "0.3"
